Added state pattern added mail functionality added adapter pattern

--- a/pom.xml
+++ b/pom.xml
@@ -405,6 +405,12 @@
       <version>2.48.2</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>javax.mail</artifactId>
+    <version>1.5.5</version>
+	</dependency>
 
   </dependencies>
 
